# ncm-cloud-copy

./: README.md  __init__.py  main.py  pyproject.toml
api/: __init__.py  client.py
config/: cookies.json  cookies.json.example
models/: config.py  song.py
services/: copy_service.py  progress.py
utils/: logger.py
