[project]
name = "netease-cloud-copy"
version = "0.1.0"
description = "将一个网易云音乐账号的云盘歌曲复制到另一个账号"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[project.scripts]
netease-copy = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "models", "services", "utils"]
include = ["main.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
